src/test/deca/context/invalid/provided/testi28.deca
//Resultats :
//Erreur contextuelle
//Ligne 25: x is already used as a param
{   
    int x;
    float.x = x;
}